--- a/app/src/main/res/layout/activity_segitiga.xml
+++ b/app/src/main/res/layout/activity_segitiga.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:fontFamily="@font/roboto_regular"
-        android:text="Luas dan Volume Persegi Panjang"
+        android:text="Luas dan Volume Prisma Segitiga"
         android:textColor="@color/black"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +40,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="60dp"
         android:textColor="@color/black"
-        android:text="Panjang"
+        android:text="Alas"
         android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/et_lebar"
+        android:id="@+id/et_tinggi"
         android:layout_width="220dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
@@ -77,39 +77,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="16dp"
-        android:text="Lebar"
+        android:text="Tinggi"
         android:textColor="@color/black"
         android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_panjang" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="16dp"
-        android:text="Tinggi"
-        android:textColor="@color/black"
-        android:textSize="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_lebar" />
-
-    <EditText
-        android:id="@+id/et_tinggi"
-        android:layout_width="220dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:textColor="@color/white"
-        android:background="@drawable/bg_edittext"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/appCompatButton"
+        android:id="@+id/btn_hitung"
         android:layout_width="220dp"
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
@@ -119,10 +95,9 @@
         android:text="Hitung"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_tinggi" />
-
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -132,7 +107,7 @@
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatButton">
+        app:layout_constraintTop_toBottomOf="@+id/btn_hitung">
 
         <TextView
             android:layout_width="wrap_content"
@@ -157,23 +132,7 @@
         android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Volume : "
-            android:textColor="@color/black"
-            android:textSize="18dp" />
-
-        <TextView
-            android:id="@+id/hasil_volume"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="xxx"
-            android:textColor="@color/black"
-            android:textSize="18dp" />
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
