--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,45 +7,14 @@
     tools:context=".HomeActivity"
     android:background="#F1F0F0">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/logomarihitung"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <fragment
+        android:id="@+id/fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph"
+        tools:layout_editor_absoluteX="59dp"
+        tools:layout_editor_absoluteY="169dp" />
 
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/persegipjg"
-        android:layout_width="220dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="170dp"
-        android:background="@drawable/btn_primary"
-        android:fontFamily="@font/roboto_medium"
-        android:text="Persegi Panjang"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/segitiga"
-        android:layout_width="220dp"
-        android:layout_height="45dp"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/btn_primary"
-        android:fontFamily="@font/roboto_medium"
-        android:text="Segitiga"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/persegipjg" />
 </androidx.constraintlayout.widget.ConstraintLayout>
