Fix some layout

--- a/app/src/main/res/layout/fragment_persegi_panjang.xml
+++ b/app/src/main/res/layout/fragment_persegi_panjang.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PersegiPanjangActivity"
+    tools:context=".PersegiPanjangFragment"
     android:background="@color/bg_primary">
     <ImageView
         android:id="@+id/imageView2"
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:fontFamily="@font/roboto_regular"
-        android:text="Luas dan Volume Balok"
+        android:text="Luas Persegi Panjang"
         android:textColor="@color/black"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
