--- a/app/src/main/res/layout/fragment_segitiga.xml
+++ b/app/src/main/res/layout/fragment_segitiga.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
         android:fontFamily="@font/roboto_regular"
-        android:text="Luas dan Volume Prisma Segitiga"
+        android:text="Luas Segitiga"
         android:textColor="@color/black"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
